# C-Programming-Language

./: CMakeLists.txt
Chat Project/: CMakeLists.txt  REPORT.md  chat.c  chat.h  client.c  dynamic_port_selection.md  history_viewer.c  message_history_storage.md  message_store.c  message_store.h  multi_client_support.md  server.c  server.h
TP1/: TP1.sln
TP1/TP1/: TP1.c  TP1.vcxproj  TP1.vcxproj.filters  logical_MAKKAWI.c  logical_MAKKAWI.h  logical_Wang.h
TP1/TP1/x64/Debug/: TP1.exe.recipe  TP1.ilk  vc143.idb
TP1/TP1/x64/Debug/TP1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  TP1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
TP2/: TP2.sln
TP2/TP2/: TP2.c  TP2.vcxproj  TP2.vcxproj.filters  inputfile.txt
TP2/TP2/CMakeFile/: TP2
TP2/TP2/x64/Debug/: TP2.exe.recipe  TP2.ilk  vc143.idb
TP2/TP2/x64/Debug/TP2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  TP2.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
TP3/: TP3.sln
TP3/TP3/: TP3.c  TP3.vcxproj  TP3.vcxproj.filters  file1.wb  function_data.txt  packing_MAKKAWI.c  packing_MAKKAWI.h  packing_Wang.h
TP3/TP3/x64/Debug/: TP3.exe.recipe  TP3.ilk  vc143.idb
TP3/TP3/x64/Debug/TP3.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  TP3.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
